# AI_Interview_Agent

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  run.py
backend/app/: main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: answer_evaluator.py  conversation_manager.py  feedback_generator.py  question_generator.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: documents.py  health.py  interview.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/schemas/: common.py  document.py  interview.py  session.py
backend/app/services/: embedding_service.py  interview_service.py  llm_service.py  pdf_service.py  rag_service.py  session_service.py  vector_store_service.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/interview/: ChatInput.tsx  MessageBubble.tsx  ScoreBar.tsx  UploadZone.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
