[project]
name = "ai-interview-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "fpdf2>=2.8.7",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
